--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html LANG="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de senha</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Site Protegido</title>
+    <style>
+        #login-page {
+            text-align: center;
+            margin-top: 50px;
+        }
+    </style>
 </head>
-
 <body>
-    <section class="conteudo">
-        <div class="conteudo-titulo">
-            <img src="unlock.svg" alt="cadeado fechado">
-            <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
-        </div>
-        <div class="conteudo-senha">
-            <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
-        </div>
-        <div class="parametro">
-            <h3 class="parametro-titulo">Personalize sua senha</h3>
-            <div class="parametro-coluna__senha">
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                </div>                
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Características da senha</h4>
-                </div>
-                <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Força da senha</h4>
-                </div>
-            </div>
-        </div>
-    </section>
-</body>
+    <div id="login-page">
+        <h2>Acesso Restrito</h2>
+        <input type="password" id="password-input"
+placeholder="Digite a senha">
 
+        <button onclick="checkPassword()">Entrar</button>
+        <p id="message"></p>
+    </div>
+
+    <div id="content-page">
+        <h1>Bem-vindo ao Conteúdo Secreto</h1>
+        <p>Este é o conteúdo que só aparece depois de digitar a senha correta.</p>
+        <p>Você pode colocar qualquer conteúdo HTML aqui.</p>
+    </div>
+
+    <script>
+        function checkPassword() {
+            const correctPassword = "minhasenha123"; // Mude esta senha!
+            const passwordInput = document.getElementById("password-input").value;
+            const loginPage = document.getElementById("login-page");
+            const contentPage = document.getElementById("content-page"); 
+            const message = document.getElementById("message");
+
+            if (passwordInput === correctPassword) {
+                loginPage.style.display = "none";
+                contentPage.style.display = "block";
+            } else {
+                message.textContent = "Senha incorreta. Tente novamente.";
+                message.style.color = "red";
+            }
+        }
+    </script>
+</body>
 </html>
